unpackaged/main/default/objects/pse__fflib_BatchProcess__c/pse__fflib_BatchProcess__c.object-meta.xml
<CustomObject>
    <label>PSA Batch Process</label>
    <nameField>
        <displayFormat>BP-{000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PSA Batch Processes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>