unpackaged/main/default/objects/pse__fflib_BatchProcess__c/fields/pse__ApexJobClassName__c.field-meta.xml
<CustomField>
    <fullName>pse__ApexJobClassName__c</fullName>
    <label>Apex Job Class Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>