unpackaged/main/default/objects/pse__fflib_BatchProcess__c/fields/pse__BatchControlRecordID__c.field-meta.xml
<CustomField>
    <fullName>pse__BatchControlRecordID__c</fullName>
    <label>Batch Control Record ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>