unpackaged/main/default/objects/pse__fflib_BatchProcess__c/fields/pse__ConcurrencyModeUniqueID__c.field-meta.xml
<CustomField>
    <fullName>pse__ConcurrencyModeUniqueID__c</fullName>
    <label>Concurrency Mode Unique ID</label>
    <length>80</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>