unpackaged/main/default/objects/pse__fflib_BatchProcess__c/fields/pse__FailedRecordID__c.field-meta.xml
<CustomField>
    <fullName>pse__FailedRecordID__c</fullName>
    <label>Failed Record ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>