unpackaged/main/default/objects/pse__fflib_BatchProcess__c/fields/pse__NumberofBatchesinChain__c.field-meta.xml
<CustomField>
    <fullName>pse__NumberofBatchesinChain__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Number of Chains in Batch</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>