unpackaged/main/default/objects/pse__fflib_BatchProcess__c/fields/pse__ProcessName__c.field-meta.xml
<CustomField>
    <fullName>pse__ProcessName__c</fullName>
    <label>Process Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>