unpackaged/main/default/objects/pse__fflib_BatchProcess__c/fields/pse__ProgressInformation__c.field-meta.xml
<CustomField>
    <fullName>pse__ProgressInformation__c</fullName>
    <label>Progress Information</label>
    <length>255</length>
    <type>Text</type>
</CustomField>