unpackaged/main/default/objects/pse__fflib_BatchProcess__c/fields/pse__SuccessfulRecordID__c.field-meta.xml
<CustomField>
    <fullName>pse__SuccessfulRecordID__c</fullName>
    <label>Successful Record ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>