unpackaged/main/default/objects/pse__fflib_BatchProcess__c/listViews/pse__All1.listView-meta.xml
<ListView>
    <fullName>pse__All1</fullName>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>